Expand the logic to multiple users

--- a/ui/src/app/App/App.module.scss
+++ b/ui/src/app/App/App.module.scss
@@ -1,33 +1,14 @@
 .app {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: auto;
-  grid-column-gap: 48px;
-  margin-top: 24px;
+  margin: 24px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
-  .left, .right {
+  .userSelect {
     display: flex;
-    flex-direction: column;
-    text-align: end;
-  }
 
-  .left {
-    justify-self: end;
-    align-items: flex-end;
-
-    h5, button {
-      margin-top: 24px;
-    }
-  }
-
-  .right {
-    justify-self: start;
-
-    .transactionTable {
-      margin-top: 24px;
-      display: grid;
-      grid-template-columns: repeat(3, auto);
-      grid-column-gap: 18px;
+    > :first-child {
+      margin: 0 24px 0 0;
     }
   }
 }
